--- a/extension/styles.css
+++ b/extension/styles.css
@@ -64,3 +64,33 @@ a.disabledLink{
 .popup-link:hover {
     color: #333;
 }
+
+
+
+.wikitextPopup {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    width:1000px;
+    height:600px;
+    max-width: 80%;
+    max-height: 80%;
+    overflow: auto;
+    z-index: 9999;
+}
+
+.defaultPopup {
+    position: fixed;
+    display: block;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    background-color: #f9f9f9;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
