--- a/extension/styles.css
+++ b/extension/styles.css
@@ -85,13 +85,7 @@ a.disabledLink{
     z-index: 9999;
 }
 
-.sidebarWithDates{
-    display: flex;
-    overflow-y:scroll;
-    width:400px;
-    flex-direction: column;
-    align-items: center;
-}
+
 
 .wikitextPopup-textarea{
     height:90%
@@ -170,3 +164,32 @@ a.disabledLink{
 
 }
 
+.sidebarWithDates{
+    display: flex;
+    overflow-y:scroll;
+    width:450px;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.sideListRow{
+    display:flex;
+    width: 350px;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.sideListExclamation{
+    display: flex;
+    color:red;
+    font-weight: bold;
+}
+
+.sideListTextContainer{
+    display: flex;
+    flex:1;
+    justify-content: center;
+    align-items: center;
+}
