--- a/extension/styles.css
+++ b/extension/styles.css
@@ -164,6 +164,12 @@ a.disabledLink{
 
 }
 
+.wikitextPopupLeftColumn{
+    display: flex;
+    flex:1;
+    flex-direction: column;
+}
+
 .sidebarWithDates{
     display: flex;
     overflow-y:scroll;
@@ -193,3 +199,24 @@ a.disabledLink{
     justify-content: center;
     align-items: center;
 }
+
+
+
+
+
+.toast {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    z-index: 0;
+    transition: opacity 0.3s ease-in-out; 
+  }
+  
+ 
