--- a/extension/styles.css
+++ b/extension/styles.css
@@ -158,7 +158,7 @@ a.disabledLink{
 }
 
 
-.bc-editing-id{
+.bc-editing-ig{
     background-color: dimgray;
     color: white;
 
@@ -215,7 +215,7 @@ a.disabledLink{
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     opacity: 1;
-    z-index: 0;
+    z-index: 10000;
     transition: opacity 0.3s ease-in-out; 
   }
   
