warning added to wikitext popup

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -200,8 +200,14 @@ a.disabledLink{
     align-items: center;
 }
 
+.wikiWarning{
+    color:red;
+    margin-bottom: 10px;
+}
 
-
+.wikitextPopupBottomBar{
+    margin-top: 10px;
+}
 
 
 .toast {
