--- a/extension/styles.css
+++ b/extension/styles.css
@@ -22,7 +22,7 @@ a.disabledLink{
     padding: 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     width:1000px;
-    height:400px;
+    height:50%;
     max-width: 80%;
     max-height: 80%;
     overflow: auto;
@@ -36,7 +36,7 @@ a.disabledLink{
 }
 
 .editorBottomBar {
-    display: flex;
+    margin-top: 10px;
 }
 
 .editorPopup-close {
@@ -55,13 +55,12 @@ a.disabledLink{
 }
 
 .editorPopup-input {
-    width: 100%;
-    height: 290px;
+    display: flex;
+    flex:1;
     padding: 10px;
-    margin-top: 20px;
     border: 1px solid #ccc;
     font-size: 16px;
-    resize: vertical;
+    resize:none;
 }
 
 .editorPopup-link {
@@ -259,14 +258,14 @@ a.disabledLink{
   .pageInfoPopup {
     position: fixed;
     display: flex;
-    top: 20px;
+    bottom: 20px;
     left: 20px;
     background-color: #fff;
     border: 1px solid #ccc;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    width:500px;
-    height:700px;
+    width:400px;
+    height:50%;
     max-width: 80%;
     max-height: 80%;
     overflow: auto;
