--- a/extension/styles.css
+++ b/extension/styles.css
@@ -19,13 +19,13 @@ a.disabledLink{
     left: 20px;
     background-color: #fff;
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 20px 0 20px 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     width:1000px;
     height:50%;
     max-width: 80%;
     max-height: 80%;
-    overflow: auto;
+    overflow: hidden;
     z-index: 9999;
 }
 
@@ -33,6 +33,7 @@ a.disabledLink{
     display: flex;
     flex:1;
     flex-direction: column;
+    overflow-y: hidden;
 }
 
 .editorBottomBar {
@@ -41,8 +42,8 @@ a.disabledLink{
 
 .editorPopup-close {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 0;
+    right: 5px;
     font-size: 24px;
     font-weight: bold;
     color: #999;
@@ -89,13 +90,13 @@ a.disabledLink{
     left: 20px;
     background-color: #fff;
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 20px 0 20px 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     width:90%;
     height:60%;
     max-width: 100%;
     max-height: 80%;
-    overflow: auto;
+    overflow: hidden;
     z-index: 9999;
 }
 
@@ -196,8 +197,11 @@ a.disabledLink{
 .sidebarWithDates{
     display: flex;
     overflow-y:scroll;
+    overflow-x: hidden;
     width:450px;
-    height: 100%;
+    height: 95%;
+    margin-top: 10px;
+    margin-bottom: 10px;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
@@ -269,13 +273,13 @@ a.disabledLink{
     left: 20px;
     background-color: #fff;
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 20px 0 20px 0;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     width:400px;
     height:50%;
     max-width: 80%;
     max-height: 80%;
-    overflow: auto;
+    overflow: hidden;
     z-index: 9999;
 }
 
