--- a/extension/styles.css
+++ b/extension/styles.css
@@ -2,6 +2,11 @@
     width:250px;
 }
 
+.CommonEraOptionDiv{
+    display: flex;
+    align-items: center;
+}
+
 .MenuTitle{
     font-weight: bold;
 }
