updated icons, name of the extension; two new methods added: ad-tn and ad-at. method bc-ot removed

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -186,12 +186,21 @@ a.disabledLink{
     background-color: aqua;
 }
 
-.bc-editing-ot{
+/* .bc-editing-ot{
     background-color: lime;
-}
+} */
 
 .bc-editing-at{
     background-color: thistle;
+}
+
+.ad-editing-tn{
+    background-color: chocolate;
+    color: white;
+}
+
+.ad-editing-at{
+    background-color: darkKhaki;
 }
 
 
